apps/network-system/envoy-gateway/config/backend-traffic-policy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: default-backend-policy
spec:
  compression:
    - type: Zstd
    - type: Brotli
    - type: Gzip

  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway

  tcpKeepalive: {}

  timeout:
    http:
      requestTimeout: 0s
